# swarm-mezo

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
notebooks/: 01_sanity_visual.ipynb  02_day1_baselines.ipynb  03_day2_fedavg.ipynb  04_day3_consensus.ipynb  05_day4_reputation.ipynb  05_day4_swarm.ipynb  06_reputation_iid.ipynb  07_conformity_control.ipynb  08_trimmed_control.ipynb  09_k10_control.ipynb  colab_run_conformity.ipynb  colab_run_k10.ipynb  colab_run_reputation.ipynb  colab_run_reputation_iid.ipynb  colab_run_trimmed.ipynb
outputs/: day1_baselines_full.json  day1_baselines_preview.json  day1_baselines_smoke.json  day2_fedavg.json  day3_consensus.json  day4_swarm.json  day5_reputation.json  day5_reputation_iid.json  day5_trimmed.json  day6_k10.json  pilot_throughput.json
scripts/: pilot_throughput.py  run_consensus.py  run_fedavg.py  run_k10.py  run_reputation.py  run_swarm.py  run_trimmed.py  smoke_test_reputation.py  smoke_test_swarm.py  smoke_test_vmap.py  verify_prompt.py
src/: consensus.py  data.py  federated.py  mezo.py  prompt.py  reputation.py  swarm.py  train.py
tests/: conftest.py  test_consensus.py  test_federated_vmap.py  test_gradient_sign.py  test_perturbation.py  test_reputation.py  test_swarm.py  test_toy.py
лекции/: лекция1.md  лекция2.md  лекция3.md
теория/: swarm-mezo.docx  swarm-mezo.md
теория/swarm_mezo/: README.md  consensus.py  experiments.py  mezo.py  objectives.py  plots.py  run.py  swarm.py
теория/swarm_mezo/results/: e1_variance_vs_N.csv  e2_variance_seedbank.csv  e3_convergence_vs_beta.csv
теория/swarm_mezo/tests/: test_e1.py  test_e2.py  test_e3.py
