[project]
name = "swarm-mezo"
version = "0.1.0"
description = "Swarm-MeZO: multi-agent variance reduction for zeroth-order LLM fine-tuning via reputation-modulated consensus"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Oleg Keatzin" }]
keywords = ["mezo", "spsa", "zeroth-order", "federated-learning", "consensus", "reputation", "swarm-intelligence", "llm-finetuning"]
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch>=2.4",
    "transformers>=4.40",
    "datasets>=2.20",
    "wandb>=0.17",
    "numpy",
    "tqdm",
    "matplotlib",
    "pandas",
    "jupyter",
    "ipykernel",
    "ipywidgets",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
